# jenkins-python-example

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  pyproject.toml
example/example/: settings.py  urls.py
example/exampleapp/: apps.py  models.py  serializers.py  viewsets.py
example/exampleapp/migrations/: 0001_initial.py
